--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "gatsby": "^3.13.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-text-transition": "^1.3.0",
+    "react-transition-group": "^1.2.1",
+    "react-typist": "^2.0.5"
   },
   "devDependencies": {
     "prettier": "2.3.2"
