--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^3.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-text-transition": "^1.3.0",
     "react-transition-group": "^1.2.1",
     "react-typist": "^2.0.5"
