--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-helmet": "^6.1.0",
     "react-text-transition": "^1.3.0",
     "react-transition-group": "^1.2.1",
-    "react-typist": "^2.0.5"
+    "react-typist": "^2.0.5",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "prettier": "2.3.2"
