--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^3.13.0",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-offline": "^4.13.0",
+    "gatsby-plugin-robots-txt": "^1.6.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
